<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChiantiBanca</string>
    <string name="widget_chb_title">ChiantiBanca InBank</string>
    <string name="activity_chb_mobile">ChiantiBanca Mobile</string>
    <string name="activity_chb_title">ChiantiBanca Mobile</string>
    <string name="pref_rcredentials_text">Ricorda le credenziali</string>
    <string name="pref_rcredentials_summary">Ricorda username e password utilizzate per l\'accesso.</string>
    <string name="pref_rcredentials_summary_dis">Attualmente nessun dato viene salvato.</string>
    <string name="pref_vcredentials_text">Password visibile in chiaro</string>
    <string name="pref_vcredentials_summary">Visualizza in chiaro la password di accesso.</string>
    <string name="pref_dohistyles_text">Applica personalizzazioni ChiantiBanca</string>
    <string name="pref_dohistyles_summary">Visualizza il logo ChiantiBanca e i colori personalizzati nelle pagine interne. (Potrebbe causare rallentamenti su alcuni terminali)</string>
    <string name="pref_usemobile_text">Utilizza la versione Mobile di InBank</string>
    <string name="pref_usemobile_summary">Se selezionato verrà utilizzata la versione InBank per Mobile. Se si desidera navigare la versione mobile è incoraggiato l\'utilizzo dell\'app ufficiale InBank.</string>
    <string name="activity_settings_title">Preferenze</string>
    <string name="text_dbug">dbug</string>
    <string name="text_pref">Preferenze</string>
    <string name="text_list">Documenti scaricati</string>
    <string name="text_rename">Rinomina</string>
    <string name="text_newname">Nuovo nome:</string>
   	<string name="text_order">Scegli Ordinamento</string>
    <string name="text_note">---</string>
    <string name="text_share">Invia...</string>
    <string name="text_delete">Cancella</string>
    <string name="pref_main_title">Impostazioni</string>
    <string name="pref_view_title">Visualizzazione</string>
    <string name="pref_useleathertheme_text">Utilizza tema pelle</string>
    <string name="pref_useleathertheme_summary">Visualizza lo sfondo in tema pelle bianca anziché il tema classico.</string>
    <string name="dialog_rcredentials_title">Salvataggio delle credenziali</string>
    <string name="dialog_rcredentials_message">Si desidera salvare utente password utilizzate per l\'accesso?</string>
    <string name="dialog_chkroot_title">Attenzione!</string>
    <string name="dialog_chkroot_message">Sul tuo dispositivo possono essere eseguiti programmi con privilegi di amministratore (Root). Questo potrebbe significare un possibile rischio di sicurezza. Sei sicuro di voler continuare?</string>
    <string name="dialog_disclaimer_title">Dichiarazione di esclusione delle responsabilità</string>
    <string name="dialog_disclaimer_message">        Chiantibanca Mobile è un progetto Open Source, il cui codice sorgente è disponibile all\'indirizzo \'https://github.com/m0max/ChbMobile/\'.
        L\'utilizzo della\'applicazione ChiantiBanca Mobile (di seguito \'App\') è subordinato all\'accettazione delle seguenti informazioni legali e clausole.
        L\'App è stata realizzata con il solo scopo di facilitare, e non sostituire, l\'accesso ai servizi denominati \'InBank\' di esclusiva proprietà di Phoenix Informatica Bancaria S.p.A. .
        Tali servizi sono di proprietà dei rispettivi autori che come tali ne detengono tutti i diritti.
        Inoltre, la presente applicazione non è in alcun modo relazionata con ChiantiBanca Credito Cooperativo Soc. Coop. che detiene tutti i diritti di sua spettanza. 
        Accettando il presente Disclaimer si accettano anche le seguenti clausole:
        - In nessun caso l\'autore/gli autori della presente applicazione sarà/saranno responsabile/i per eventuali danni diretti, indiretti, consequenziali, punitivi, speciali, incidentali o di altro tipo di qualsiasi natura derivanti dall\'utilizzo proprio e improprio della presente applicazione.
		- Nel caso di controversie con i rispettivi propretari del servizio, l\'utente solleva l\'autore/gli autori della presente applicazione da qualsiasi responsabilità per reclami, rivendicazioni e danni (effettivi e consequenziali) di qualsiasi tipo e natura, nota e ignota, derivanti da o in qualunque modo connessi a tali controversie.
        Il solo utilizzo di questa applicazione vale come accettazione delle suddette informazioni legali e clausole.	</string>
    <string name="dialog_ok">Si</string>
    <string name="dialog_no">No</string>
    <string name="dialog_accept">Accetto</string>
    <string name="dialog_reject">Rifiuto</string>
    <string name="title_activity_chb_list">ChbList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>