<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory 
	android:title="@string/pref_main_title"
	android:key="pref_main">
	    
	    <CheckBoxPreference android:title="@string/pref_rcredentials_text" 
	        android:summary="@string/pref_rcredentials_summary" 
	        android:enabled="true"
	        android:defaultValue="true" 
	        android:key="pref_rcredentials"/>
	    
	    <CheckBoxPreference android:title="@string/pref_vcredentials_text" 
	        android:summary="@string/pref_vcredentials_summary"
	        android:enabled="true"
	        android:defaultValue="false" 
	        android:key="pref_vcredentials"/>
	    
	    <CheckBoxPreference android:title="@string/pref_dohistyles_text" 
	        android:summary="@string/pref_dohistyles_summary" 
	        android:enabled="false"
	        android:defaultValue="false" 
	        android:key="pref_dohistyles"/>
	    
		<CheckBoxPreference android:title="@string/pref_usemobile_text" 
	        android:summary="@string/pref_usemobile_summary" 
	        android:enabled="true"
	        android:defaultValue="true" 
	        android:key="pref_usedesktop"/>
	
	</PreferenceCategory>
	
	<PreferenceCategory 
		android:title="@string/pref_view_title"
		android:key="pref_view">
		
		<CheckBoxPreference android:title="@string/pref_useleathertheme_text" 
	        android:summary="@string/pref_useleathertheme_summary" 
	        android:defaultValue="false" 
	        android:key="pref_useleathertheme"/>
	    
	</PreferenceCategory>

</PreferenceScreen>